with loop and test

--- a/opps javascret/2/test.html
+++ b/opps javascret/2/test.html
@@ -36,7 +36,7 @@ avrage of your inputs: <input type="text" onclick="fun1()" name="avg"><br>
 
 if( form.avg.value>=70 ){
     document.getElementById("a").innerHTML = "You got A+"
-}if (form.avg.value>=40  && form.avg.value<=60 )   {
+}else if (form.avg.value>=40  && form.avg.value<=60 )   {
           document.getElementById("b").innerHTML = "You got B+"
 }else {
           document.getElementById("c").innerHTML = "You got C+"
